# FastApi-Project-Environment

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
certs/: private.pem  public.pem
src/: main.py
src/api_v1/users/: schemas.py  utils.py
src/core/: config.py
